--- a/src/style.css
+++ b/src/style.css
@@ -1,37 +1,32 @@
-*,
-*::after,
-*::before {
+*, *::after, *::before {
   box-sizing: border-box;
+}
+
+.header {
+  grid-column: span 4;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 body {
   margin: 0;
-  padding: 2rem;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-h1 {
-  font-size: 3em;
-  margin: 2rem auto;
-  letter-spacing: 2px;
-}
-
-.deck-container {
-  margin: 0;
   display: grid;
-  grid-template-columns: repeat(2, 4rem);
-  grid-template-rows: 7rem;
-  gap: 0.5rem;
-  cursor: pointer;
+  grid-template-columns: repeat(4, 5rem);
+  grid-template-rows: 8rem 8rem 4rem 3rem 2rem;
+  gap: .5rem;
   justify-content: center;
   padding-top: 1rem;
 }
 
 .deck {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
   height: 100%;
   width: 100%;
   border: 1px solid black;
@@ -39,40 +34,22 @@ h1 {
   justify-content: center;
   align-items: center;
   font-size: 3rem;
-  border-radius: 0.5rem;
+  border-radius: .5rem;
   color: white;
+  background-color: green;
   user-select: none;
 }
 
-.computer-deck {
-  background-color: green;
-}
-
-.middle-container {
-  margin: 0;
-  display: grid;
-  grid-template-columns: 16rem;
-  grid-template-rows: 7rem;
-  row-gap: 0.5rem;
-  cursor: pointer;
-  place-content: center;
-  padding: 1rem;
-}
-
-.text {
-  grid-column: span 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
-}
-
-.card {
+.card-slot {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 3;
   position: relative;
   height: 100%;
   width: 100%;
   border: 1px solid black;
-  border-radius: 0.5rem;
+  border-radius: .5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -87,65 +64,61 @@ h1 {
   color: black;
 }
 
-.card::before,
-.card::after {
+.card::before, .card::after {
   position: absolute;
   content: attr(data-value);
   font-size: 1rem;
+  letter-spacing: 5px;
 }
 
 .card::before {
-  top: 0.5rem;
-  left: 0.5rem;
+  top: .5rem;
+  left: .5rem;
 }
 
 .card::after {
-  bottom: 0.5rem;
-  right: 0.5rem;
+  bottom: .5rem;
+  right: .5rem;
   transform: rotate(180deg);
 }
 
-.btn-container {
-  align-self: center;
+.text {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  grid-row-end: 4;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 1rem;
-  gap: 2rem;
+  font-size: 1.5rem;
 }
 
-.btn {
-  background-color: #4caf50;
-  border: none;
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  width: 20ch;
-  border-radius: 0.5rem;
+  border-radius: .5rem;
 }
 
-.new-game {
-  height: 6ch;
-  margin: auto;
+#new-game-button {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 4;
+  grid-row-end: 5;
+  background-color: limegreen;
+  height: 66%;
 }
 
-.clubs {
-  background-color: black;
+.suit {
+  grid-row-start: 5;
+  grid-row-end: 6;
 }
 
-.diamonds {
+#diamonds-button, #hearts-button {
   background-color: red;
 }
 
-.hearts {
-  background-color: red;
-}
-
-.spades {
+#clubs-button, #spades-button {
   background-color: black;
 }
